--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "^17.2.0",
     "@angular/compiler": "^17.2.0",
     "@angular/core": "^17.2.0",
+    "@angular/fire": "^17.1.0",
     "@angular/forms": "^17.2.0",
     "@angular/platform-browser": "^17.2.0",
     "@angular/platform-browser-dynamic": "^17.2.0",
@@ -27,6 +28,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "bootstrap": "^5.3.3",
     "express": "^4.18.2",
+    "firebase": "^10.12.0",
     "rxjs": "~7.8.0",
     "swiper": "^7.4.1",
     "tslib": "^2.3.0",
